fixes issue where some pills got cut off.  also extends sidebar to 29% from 25%

--- a/src/components/Pillbox/Pillbox.scss
+++ b/src/components/Pillbox/Pillbox.scss
@@ -8,6 +8,7 @@
   background-color: white;
   top: 0px;
   visibility: hidden;
+  width: 100%;
 }
 
 .adding {
