--- a/src/routes/MemberSidebar/MemberSidebar.scss
+++ b/src/routes/MemberSidebar/MemberSidebar.scss
@@ -1,5 +1,4 @@
 .member-sidebar {
   padding-top: $space-6x;
   margin-left: -40px;
-  margin-right: -32px;
 }
